[gd_scene load_steps=3 format=3 uid="uid://c4d73vmy86vjx"]

[ext_resource type="Script" path="res://Main.gd" id="1_pex13"]
[ext_resource type="PackedScene" uid="uid://cgk7qn5a7xqgx" path="res://scenes/King.tscn" id="3_4lxto"]

[node name="Node2D" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_pex13")

[node name="King" parent="." instance=ExtResource("3_4lxto")]
position = Vector2(49, 260)

[node name="AllyPosition" type="Marker2D" parent="."]
position = Vector2(140, 260)

[node name="EnemyPosition0" type="Marker2D" parent="."]
position = Vector2(300, 260)

[node name="EnemyPosition1" type="Marker2D" parent="."]
position = Vector2(400, 260)

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="HealthText" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = 1
offset_right = 1151.0
offset_bottom = 644.0
theme_override_font_sizes/normal_font_size = 50
text = "Health: 50"
fit_content = true
scroll_active = false
autowrap_mode = 0

[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
